# tak

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Makefile  PLAN.md  PLAN_FINAL.md  README.md  RUST_GUIDELINES.md  TASKS.py  dump_docs.md  get-tak.sh  get-takd.sh  install-locally.sh  refactor.md
crates/tak/: ARCHITECTURE.md  Cargo.toml  build.rs  build_examples.rs  build_rust_docs.rs  default_7106448107523687946_0_1495292.profraw  default_7106448107523687946_0_1495306.profraw  default_7106448107523687946_0_1495394.profraw  default_7106448107523687946_0_1495408.profraw  default_7106448107523687946_0_1495492.profraw  default_7106448107523687946_0_1495506.profraw  default_7106448107523687946_0_1495618.profraw  default_7106448107523687946_0_1495632.profraw  default_7106448107523687946_0_1495718.profraw  default_7106448107523687946_0_1495732.profraw  default_7106448107523687946_0_1496955.profraw  default_7106448107523687946_0_1496980.profraw  default_7106448107523687946_0_1496988.profraw  default_7106448107523687946_0_1497033.profraw  default_7106448107523687946_0_1497387.profraw  default_7106448107523687946_0_1497401.profraw  default_7106448107523687946_0_1497458.profraw  default_7106448107523687946_0_1497472.profraw  default_7106448107523687946_0_1497497.profraw  default_7106448107523687946_0_1497511.profraw  default_7106448107523687946_0_1497819.profraw  default_7106448107523687946_0_1497836.profraw  default_7106448107523687946_0_1497863.profraw  default_7106448107523687946_0_1497879.profraw  default_7106448107523687946_0_1497881.profraw  default_7106448107523687946_0_1497919.profraw  default_7106448107523687946_0_1498051.profraw  default_7106448107523687946_0_1498065.profraw  default_7106448107523687946_0_1498094.profraw  default_7106448107523687946_0_1498108.profraw  default_7106448107523687946_0_1498161.profraw  default_7106448107523687946_0_1498176.profraw  default_7106448107523687946_0_1498245.profraw  default_7106448107523687946_0_1498260.profraw  default_7106448107523687946_0_1498339.profraw  (+11 more)
crates/tak-core/: ARCHITECTURE.md  Cargo.toml  default_10486470315734598888_0_1501338.profraw  default_10486470315734598888_0_1549606.profraw  default_10486470315734598888_0_1570834.profraw  default_10486470315734598888_0_1715841.profraw  default_5665039489436671628_0_1501335.profraw  default_5665039489436671628_0_1549603.profraw  default_5665039489436671628_0_1570831.profraw  default_5665039489436671628_0_1715838.profraw
crates/tak-core/src/: crypto_provider.rs  endpoint.rs  label.rs  lib.rs  mock.rs  model.rs  planner.rs  remote_inventory.rs  runtime_paths.rs
crates/tak-core/tests/: core_behavior.rs  crypto_provider_behavior.rs  mod.rs  module_layout_contract.rs  remote_inventory_contract.rs  runtime_paths_contract.rs  serde_defaults_contract.rs
crates/tak-exec/: ARCHITECTURE.md  Cargo.toml  default_14235842911676071537_0_1501372.profraw  default_16510664407156041304_0_1501390.profraw
crates/tak-exec/src/: client_observations.rs  client_remotes.rs  client_remotes_tests.rs  client_tor.rs  container_engine.rs  container_runtime.rs  execution_graph.rs  image_cache.rs  lease_client.rs  lib.rs  lib_tests.rs  protocol_result_http_connection_cleanup_tests.rs  protocol_result_http_tests.rs  protocol_result_http_timeout_tests.rs  remote_endpoint.rs  remote_events_wait.rs  remote_protocol_codec.rs  retry.rs  step_runner.rs  summary.rs  task_run_metadata.rs
crates/tak-exec/tests/: client_observation_cache_contract.rs  client_tor_config_contract.rs  client_tor_config_precedence_contract.rs  container_runtime_bollard_contract.rs  container_runtime_real_context.rs  doctest_policy_contract.rs  exec_behavior.rs  mod.rs  (+51 more)
crates/tak-loader/: ARCHITECTURE.md  Cargo.toml  default_1115415002717655119_0_1501675.profraw  default_18407299585558344331_0_1501674.profraw
crates/tak-proto/: Cargo.toml  build.rs  default_12340267874227289554_0_1501729.profraw  default_12340542781136797138_0_1549980.profraw  default_18405379838256247435_0_1501728.profraw  default_18405379838256247435_0_1549979.profraw
crates/tak-runner/: Cargo.toml  default.profraw  default_4780691558592437481_0_1501736.profraw
crates/tak-update/: Cargo.toml
crates/takd/: ARCHITECTURE.md  Cargo.toml  build.rs  default_13174926169115298790_0_1501768.profraw  default_7106448107523687946_0_1501779.profraw  default_7106448107523687946_0_1501780.profraw  default_7106448107523687946_0_1501781.profraw  default_7106448107523687946_0_1501782.profraw  default_7106448107523687946_0_1501783.profraw  default_7106448107523687946_0_1501786.profraw  default_7106448107523687946_0_1501787.profraw  default_7106448107523687946_0_1501789.profraw  default_7106448107523687946_0_1501790.profraw  default_7106448107523687946_0_1501920.profraw  default_7106448107523687946_0_1501931.profraw  default_7106448107523687946_0_1501985.profraw  default_7106448107523687946_0_1501987.profraw  default_7106448107523687946_0_1501989.profraw  default_7106448107523687946_0_1501991.profraw  default_7106448107523687946_0_1502042.profraw  default_7106448107523687946_0_1502055.profraw  default_7106448107523687946_0_1502082.profraw  default_7106448107523687946_0_1502083.profraw  default_7106448107523687946_0_1502121.profraw  default_7106448107523687946_0_1502122.profraw  default_7106448107523687946_0_1502125.profraw  default_7106448107523687946_0_1502152.profraw  default_7106448107523687946_0_1502207.profraw  default_7106448107523687946_0_1502209.profraw  default_7106448107523687946_0_1502277.profraw  default_7106448107523687946_0_1502423.profraw  default_7106448107523687946_0_1502561.profraw  default_7106448107523687946_0_1502577.profraw  default_7106448107523687946_0_1502592.profraw  default_7106448107523687946_0_1502617.profraw  default_7106448107523687946_0_1502631.profraw  default_7106448107523687946_0_1502660.profraw  default_7106448107523687946_0_1502674.profraw  default_9844199456719263516_0_1501738.profraw
crates/taskcraft/: ARCHITECTURE.md  Cargo.toml
crates/taskcraft-exec/: ARCHITECTURE.md  Cargo.toml
crates/taskcraftd/: ARCHITECTURE.md  Cargo.toml
(+1481 files in other folders)
