[workspace]
resolver = "2"
members = [
  "crates/tak-core",
  "crates/tak-loader",
  "crates/tak-exec",
  "crates/takd",
  "crates/tak",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.8"
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
ignore = "0.4"
predicates = "3.1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
webbrowser = "1.0"
monty = { git = "https://github.com/pydantic/monty.git", package = "monty", rev = "9395c521d40a118edbf4bdb21bda6a61c70a5aec" }
monty_type_checking = { git = "https://github.com/pydantic/monty.git", package = "monty_type_checking", rev = "9395c521d40a118edbf4bdb21bda6a61c70a5aec" }
