[package]
name = "tak-core"
version = "0.1.0"
edition = "2024"
autotests = false

[[test]]
name = "suite"
path = "tests/mod.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true
rustls.workspace = true
url.workspace = true
