[package]
name = "tak-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tak-core = { path = "../tak-core" }
serde_json.workspace = true
uuid.workspace = true
takd = { path = "../takd" }
tak-loader = { path = "../tak-loader" }
tempfile.workspace = true
arti-client = { version = "0.39", default-features = false, features = ["tokio", "rustls", "onion-service-client"] }

[dev-dependencies]
tempfile.workspace = true
