[package]
name = "tak-exec"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
base64.workspace = true
bollard.workspace = true
futures.workspace = true
tokio.workspace = true
tak-core = { path = "../tak-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
uuid.workspace = true
tak-loader = { path = "../tak-loader" }
tempfile.workspace = true
zip.workspace = true
arti-client = { version = "0.39", default-features = false, features = ["tokio", "rustls", "onion-service-client"] }

[dev-dependencies]
base64.workspace = true
sha2.workspace = true
tempfile.workspace = true
takd = { path = "../takd" }
