[package]
name = "tak-exec"
version = "0.1.0"
edition = "2024"

[lib]
# Cargo rustdoc currently fails to resolve `tak-exec`'s private dependency graph under `cargo test`.
doctest = false

[dependencies]
anyhow.workspace = true
base64.workspace = true
bollard.workspace = true
bytes.workspace = true
futures.workspace = true
ignore.workspace = true
tokio.workspace = true
prost.workspace = true
tak-core = { path = "../tak-core" }
tak-proto = { path = "../tak-proto" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
uuid.workspace = true
tak-loader = { path = "../tak-loader" }
tar.workspace = true
tempfile.workspace = true
toml.workspace = true
url.workspace = true
zip.workspace = true
arti-client = { version = "0.39", default-features = false, features = ["tokio", "rustls", "onion-service-client"] }
tor-rtcompat = "0.39"

[dev-dependencies]
base64.workspace = true
sha2.workspace = true
tempfile.workspace = true
takd = { path = "../takd" }
