[package]
name = "tak-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
ignore.workspace = true
hex.workspace = true
monty.workspace = true
monty_type_checking.workspace = true
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tak-core = { path = "../tak-core" }
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
