[package]
name = "tak-loader"
version = "0.1.0"
edition = "2024"
autotests = false

[[test]]
name = "suite"
path = "tests/mod.rs"

[dependencies]
anyhow.workspace = true
ignore.workspace = true
hex.workspace = true
monty.workspace = true
monty_type_checking.workspace = true
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff.git", rev = "6ded4bed1651e30b34dd04cdaa50c763036abb0d" }
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
tak-core = { path = "../tak-core" }
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
