[package]
name = "tak-proto"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true

[dev-dependencies]
serde_json.workspace = true
