[package]
name = "tak"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow.workspace = true
arti-client = { version = "0.39", default-features = false, features = ["tokio", "rustls", "onion-service-client"] }
axum.workspace = true
clap.workspace = true
futures.workspace = true
prost.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tak-core = { path = "../tak-core" }
tak-exec = { path = "../tak-exec" }
tak-loader = { path = "../tak-loader" }
tak-proto = { path = "../tak-proto" }
tokio.workspace = true
toml.workspace = true
webbrowser.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
serde.workspace = true
toml.workspace = true
