[package]
name = "tak"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
# Cargo rustdoc currently fails to resolve `tak`'s private CLI dependency graph under `cargo test --doc`.
doctest = false

[dependencies]
anyhow.workspace = true
arti-client = { version = "0.41", default-features = false, features = ["tokio", "rustls", "onion-service-client"] }
axum.workspace = true
bytes.workspace = true
clap.workspace = true
crossterm.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
prost.workspace = true
qrcode.workspace = true
ratatui = { workspace = true, features = ["crossterm"] }
serde.workspace = true
serde_json.workspace = true
tak-core = { path = "../tak-core" }
tak-exec = { path = "../tak-exec" }
tak-loader = { path = "../tak-loader" }
tak-proto = { path = "../tak-proto" }
tokio.workspace = true
toml.workspace = true
url.workspace = true
webbrowser.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nokhwa = { workspace = true, features = ["input-v4l"] }
quircs.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
serde.workspace = true
toml.workspace = true
takd = { path = "../takd" }

[build-dependencies]
serde.workspace = true
toml.workspace = true
