[package]
name = "takd"
version = "0.1.0"
edition = "2024"
autotests = false

[[bin]]
name = "takd"
path = "src/main.rs"
test = false

[[test]]
name = "suite"
path = "tests/mod.rs"

[dependencies]
anyhow.workspace = true
arti-client = { version = "0.41", default-features = false, features = ["tokio", "rustls", "onion-service-service"] }
base64.workspace = true
bollard.workspace = true
bytes.workspace = true
clap.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
ignore.workspace = true
libc = "0.2"
prost.workspace = true
qrcode.workspace = true
ratatui.workspace = true
rusqlite.workspace = true
safelog = "0.8"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tak-core = { path = "../tak-core" }
tak-proto = { path = "../tak-proto" }
tak-runner = { path = "../tak-runner" }
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sysinfo.workspace = true
tar.workspace = true
url.workspace = true
tor-cell = "0.41"
tor-hsservice = "0.41"
tor-rtcompat = "0.41"
tui-qrcode.workspace = true
uuid.workspace = true
zip.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
