[package]
name = "taskcraft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
taskcraft-core = { path = "../taskcraft-core" }
taskcraft-exec = { path = "../taskcraft-exec" }
taskcraft-loader = { path = "../taskcraft-loader" }
taskcraftd = { path = "../taskcraftd" }
tokio.workspace = true
uuid.workspace = true
webbrowser.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
serde.workspace = true
toml.workspace = true
