[package]
name = "taskcraftd"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
taskcraft-core = { path = "../taskcraft-core" }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
